--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -138,13 +138,20 @@
         </activity>
 
         <activity
-            android:name=".LoginActivity"
+            android:name=".MainNewLoginActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppCusTheme">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppCusTheme">
         </activity>
         <activity
             android:name="com.facebook.FacebookActivity"
